--- a/flights.html
+++ b/flights.html
@@ -134,7 +134,7 @@
                 To: localStorage.getItem("To"),
                 email: localStorage.getItem("email")
             })
-            alert(seatsSelected + " seats are booked. You can check in the transaction history")
+            alert(seatsSelected + " seats are booked. You can check in the history")
         }
     })
 
