--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <img src="flyhigh.png">
     </header>
-
+    <!--Selecting preferable user for getting into the website-->
     <div class="index-background">
         <div class="container">
             <div class="options">
