--- a/user.html
+++ b/user.html
@@ -13,7 +13,7 @@
     <header>
         <img src="flyhigh.png">
     </header>
-
+    <!--Enabling User login  -->
     <div class="user-background">
         <div class="container">
             <div class="form" id="signin-form">
@@ -25,11 +25,10 @@
                 </div>
                 <p class="register-text">Don't have an account? <a href="#" id="register-btn">Register</a></p>
             </div>
-
+            <!-- New user registration -->
             <div class="form" id="register-form" style="display: none;">
                 <h2>Registration</h2>
                 <div id="user-registration-form">
-                    <!-- <input type="text" name="username" id="username" placeholder="Username" required><br> -->
                     <input type="email" id="email2" placeholder="Email" required><br>
                     <input type="password" id="password2" placeholder="Password" required><br>
                     <button id="register">Register</button>
