--- a/userhome.html
+++ b/userhome.html
@@ -59,13 +59,11 @@
 <script type="module">
     // Import the functions you need from the SDKs you need
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
-    import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, signOut } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js";
+    import { getAuth, signOut } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js";
   
-    import { update, getDatabase, ref, child, onValue, get, set } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js"
-    // TODO: Add SDKs for Firebase products that you want to use
-    // https://firebase.google.com/docs/web/setup#available-libraries
+    
   
-    // Your web app's Firebase configuration
+    // web app's Firebase configuration
     const firebaseConfig = {
       apiKey: "AIzaSyDHj1q12tQAQ7QLmb6iI-KK0lb9h5cZsnU",
       authDomain: "devrev-1e46b.firebaseapp.com",
@@ -79,7 +77,6 @@
     // Initialize Firebase
     const app = initializeApp(firebaseConfig);
   
-    const db = getDatabase();
     const auth = getAuth(app);
     document.getElementById('logout').addEventListener('click', function(){
         signOut(auth).then(() => {
