--- a/History.html
+++ b/History.html
@@ -124,27 +124,15 @@
         sNo = 0;
         tbody.innerHTML = "";
         History.forEach(element => {
-            if(element.email == localStorage.getItem("email")){
+            if(element.email == localStorage.getItem("email")){ //specific to each and every user
                 AddItemsToTable(element.from, element.To, element.FlightName, element.FlightId, element.Seats);
             }
         });
     }
 
-    function GetAllDataOnce(){
-        const dbRef = ref(db);
-
-        get(child(dbRef, "History"))
-        .then((snapshot) => {
-            var history = []
-
-            snapshot.forEach(childSnapShot => {
-                history.push(childSnapShot.val());
-            });
-
-            AddAllItemsToTable(history)
-        })
-    }
-
+    
+    //Taking the reference of realtime database inorder to view the bookings of flights by respective users
+    
     function GetAllDataRealTime(){
         const dbRef = ref(db, "History");
 
